# boardgamesmile

./: .gitignore  CMakeLists.txt  Cell.qml  FpsItem.qml  GameLevel.qml  Main.qml  Option.qml  Player.qml  README.md  Start.qml  Test.qml  main.cpp  scalingratiowrapper.cpp  scalingratiowrapper.h
android/: AndroidManifest.xml
js/: logic.js  scaling-ratio.js
